--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -1,8 +1,10 @@
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px) {
-
+@media only screen and (max-width : 1300px) {
+  .top_header ul li{
+    margin-right: 25px;
+  }
 }
 
 /* Medium Devices, Desktops */
