--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,8 +1,8 @@
 .nav-icon-line{
-  width: 100%;
   position: relative;
   display: flex;
   align-items: center;
+  z-index: 150;
 }
 .nav-icon-line #nav-text-in{
   margin-left: 63px;
@@ -15,9 +15,9 @@
 }
 #nav-icon{
   float: left;
-  display: none;
-  width: 31px;
-  height: 30px;
+  display: inline-block;
+  width: 39px;
+  height: 39px;
   border-radius: 4px;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
@@ -68,8 +68,9 @@
 
 .open{
   z-index: 999999;
-  top: 27px;
+  position: fixed;
   right: 47px;
+  top: 80px;
 }
 
 #nav-icon.open span:nth-child(1) {
@@ -83,6 +84,11 @@
   transition: max-height 1s ease;
   overflow: hidden;
   width: 100%;
+}
+.opener1{
+  display: block!important;
+  position: fixed!important;
+
 }
 #nav-icon.open span:nth-child(2) {
   -webkit-transform: rotate(45deg);
@@ -105,9 +111,101 @@
 }
 
 .nav-icon-line{
+  display: inline-block;
+}
+
+.top_header ul{
+  display: flex;
+  list-style: none;
+  margin-left: auto;
+  position: relative;
+  z-index: 150;
+  margin-right: 60px;
+}
+.top_header ul li{
+  margin-right: 60px;
+}
+
+.top_header ul li a{
+  color: $white;
+  padding: 10px;
+  font-size: 1rem;
+  font-family: CyrMedium, Arial;
+  text-decoration: none;
+}
+.top_header ul li a:hover{
+  color: #d1d0d0;
+}
+// Menu HIDE
+.container_hide_menu{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: url("../img/bluer.jpg")0 0 no-repeat;
+  background-size: cover;
+  z-index: 10000;
   display: none;
 }
 
+.nav-icon-line_absol{
+  position: absolute;
+  width: 100%;
+}
+.container_hide_menu > ul{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.container_hide_menu > ul > li > a{
+  color: $white;
+  padding: 10px;
+  font-size: 1rem;
+  font-family: CyrMedium, Arial;
+  text-decoration: none;
+}
+.container_hide_menu > ul > li > a:hover{
+  color: #d1d0d0;
+}
+// Menu level 2
+.container_hide_menu > ul .menu_leve_two{
+  list-style: none;
+  padding-top: 30px;
+  position: relative;
+}
+
+.container_hide_menu > ul > li:before{
+  content: '';
+  background: #bec2c2;
+  display: block;
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  right: 0;
+}
+.container_hide_menu > ul .menu_leve_two li{
+  margin-top: 20px;
+}
+
+.container_hide_menu > ul .menu_leve_two li > a{
+  color: $white;
+  padding: 10px;
+  font-size: 1rem;
+  font-family: CyrLight, Arial;
+  text-decoration: none;
+}
+.container_hide_menu > ul .menu_leve_two li > a:hover{
+  color: #d1d0d0;
+}
 /*==========  Desktop First Method  ==========*/
 
 
