--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -120,10 +120,10 @@
   margin-left: auto;
   position: relative;
   z-index: 150;
-  margin-right: 60px;
+  margin-right: 1rem;
 }
 .top_header ul li{
-  margin-right: 60px;
+  margin-right: 2rem;
 }
 
 .top_header ul li a{
