--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,6 +36,47 @@ h2{
   font-family: CyrMedium,Arial;
   flex: 100%;
 }
+
+.email ,.tel {
+  position: fixed;
+  right: -250px;
+  display: flex;
+  align-items: center;
+  height: 60px;
+  transition: all .5s;
+}
+
+.tel{
+  top: 30%;
+}
+.email{
+  top: 45%;
+}
+.tel img, .email img{
+  width: 60px;
+  height: 60px;
+  background-size: cover;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.tel a, .email a{
+  background: #ed2a31;
+  display: inline-flex;
+  justify-content: center;
+  height: 100%;
+  align-items: center;
+  color: $white;
+  text-decoration: none;
+  min-width: 250px;
+  font-family: CyrMedium,Arial;
+  font-size: 1.4rem;
+}
+
+.openMenu{
+  right: 0!important;
+  transition: all .8s;
+}
 .wrapper{
   display: flex;
   flex-flow: row wrap;
@@ -197,6 +238,9 @@ header{
   opacity: 1;
 }
 
+.pan_one{
+  justify-content: space-between;
+}
 .pan_one .box{
   width: 50%;
   padding: 30px 30px 0 0;
@@ -376,4 +420,223 @@ header{
   color: $white;
   font-size: 1.4rem;
   font-family: CyrMedium,Arial;
+}
+
+.block_five {
+  background: url("../img/bg_5.jpg")0 0 no-repeat;
+  background-size: cover;
+  margin-top: 10.71rem;
+  min-height: 350px;
+}
+
+.block_five .box_img{
+  display: flex;
+  justify-content: space-between;
+}
+
+.block_five .box_img .box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: $white;
+  font-size: 1.4rem;
+}
+
+.block_five .box_img .box img{
+  width: 103px;
+  height: 103px;
+  margin-bottom: 2rem;
+}
+
+.block_five h2{
+  color: $white;
+  text-align: center;
+  font-size: 2rem;
+  font-family: CyrMedium,Arial;
+  margin: 3.5rem 0 6rem;
+}
+
+.block_six .wrap{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.block_six .wrap h2{
+  color: #285bc1;
+  font-size: 2rem;
+  padding: 4rem 0 2rem;
+  font-family: CyrMedium,Arial;
+  text-transform: uppercase;
+}
+
+.block_six .wrap .box_item{
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.block_six .wrap .box_item img{
+  width: 100%;
+  height: 270px;
+}
+
+.block_six .wrap .box_item p{
+  font-size: 1.4rem;
+  margin-top: .5rem;
+  flex-basis: 30%;
+}
+
+.block_six .wrap .box_item .link{
+  background: $red;
+  text-decoration: none;
+  padding: 1rem;
+  color: $white;
+  display: inline-block;
+  margin-top: 3.14rem;
+  align-self: flex-end;
+  transition: all .6s;
+}
+
+.block_six .wrap .box_item .link:hover{
+ background: $redHover;
+}
+
+.block_seven{
+  background: url("../img/bg_serves.png")0 0 no-repeat;
+  background-size: cover;
+  color: $white;
+  padding: 7.14rem 0;
+  display: flex;
+}
+
+.block_seven .wrap{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.block_seven .wrap .text_one{
+  font-size: 2.98rem;
+  font-family: CyrLight, Arial;
+  margin-right: 2.98rem;
+  flex-basis: 30%;
+}
+
+.block_seven .wrap .text_two{
+  font-family: CyrLight, Arial;
+  margin-right: 2.98rem;
+  font-size: 1.4em;
+  flex-basis: 45%;
+}
+
+.block_seven .wrap .link{
+  color: $white;
+  font-size: 2rem;
+  font-family: CyrLight, Arial;
+  text-decoration: none;
+  flex-basis: 30%;
+  border: 1px solid $white;
+  text-align: center;
+  padding: 1rem 0;
+  transition: all .5s;
+}
+
+.block_seven .wrap .link:hover{
+  background: rgba(48, 101, 209, 0.43);
+}
+
+footer{
+  background: #182c4f;
+  color: $white;
+}
+
+footer .wrap{
+  display: flex;
+  justify-content: space-between;
+}
+
+footer a{
+  color: $white;
+  text-decoration: none;
+  font-family: CyrLight,Arial;
+  font-size: 1.4rem;
+  transition: all .5s;
+  position: relative;
+}
+footer a:after{
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 1px;
+  bottom: -0.5rem;
+  left: 0;
+  right: 0;
+  transform-origin: center;
+  transition: width .8s;
+}
+
+footer a:hover:after{
+  background: #b4b3b3;
+  width: 100%;
+}
+
+footer a:hover{
+  color: #b4b3b3;
+}
+
+footer ul{
+  list-style: none;
+}
+
+footer ul li a{
+  margin-bottom: 1rem;
+  display: inline-block;
+}
+
+footer .box_address{
+  color: $white;
+  text-decoration: none;
+  font-family: CyrLight,Arial;
+  font-size: 1.4rem;
+  margin-bottom: 7.14rem;
+}
+footer .box_address .addr2  a{
+  margin-bottom: 8px;
+  display: block;
+}
+footer .box_address .addr1, footer .box_address .addr2, footer .box_address .addr3{
+  margin-bottom: 1rem;
+  position: relative;
+  min-height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+footer .box_address .addr1:before, footer .box_address .addr2:before, footer .box_address .addr3:before{
+  content: '';
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  position: absolute;
+  left: -70px;
+}
+
+footer .box_address .addr1:before{
+  background: url("../img/spot.png")0 0 no-repeat;
+}
+
+footer .box_address .addr2:before{
+  background: url("../img/spot.png")0 -90px no-repeat;
+}
+
+footer .box_address .addr3:before{
+  background: url("../img/spot.png")0 -176px no-repeat;
+}
+
+footer .box_address .link_social{
+  margin-top: 30px;
+  display: inline-block;
 }
