--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -9,6 +9,9 @@
   margin: auto;
   position: relative;
 }
+.do_you{
+  display: inline-block;
+}
 .form h2{
   font-family: CodePro, monospace;
   font-weight: bold;
