--- a/sass/lib/_magnific-popup.scss
+++ b/sass/lib/_magnific-popup.scss
@@ -76,8 +76,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1043;
+ /* z-index: 1043;*/
   position: fixed;
+  z-index: 99999;
   outline: none !important;
   -webkit-backface-visibility: hidden; }
 
@@ -101,7 +102,10 @@
   display: none; }
 
 .mfp-content {
-  position: relative;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
   display: inline-block;
   vertical-align: middle;
   margin: 0 auto;
@@ -410,3 +414,30 @@ img.mfp-img {
   .mfp-container {
     padding-left: 6px;
     padding-right: 6px; } }
+
+.image-source-link {
+  color: #98C3D1;
+}
+
+.mfp-with-zoom .mfp-container,
+.mfp-with-zoom.mfp-bg {
+  opacity: 0;
+  -webkit-backface-visibility: hidden;
+  /* ideally, transition speed should match zoom duration */
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.mfp-with-zoom.mfp-ready .mfp-container {
+  opacity: 1;
+}
+.mfp-with-zoom.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+
+.mfp-with-zoom.mfp-removing .mfp-container,
+.mfp-with-zoom.mfp-removing.mfp-bg {
+  opacity: 0;
+}
