--- a/sass/pages/pod.scss
+++ b/sass/pages/pod.scss
@@ -107,6 +107,10 @@
   height: 100%;
 }
 
+#video{
+  text-align: center;
+}
+
 .nav_slider {
   width: 200px;
   display: flex;
@@ -200,6 +204,59 @@
   width: 100%;
   height: 100%;
 }
+
+.application_industries{
+  background: #e7eef4;
+  padding-top: 90px;
+  padding-bottom: 150px;
+}
+
+.application_industries h2{
+  color: $blue;
+  font-size: 2rem;
+  font-family: CyrMedium,Arial;
+  margin-bottom: 20px;
+}
+
+.application_industries .box_items{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.application_industries .box_items .item_in{
+  width: 270px;
+  height: 180px;
+  margin: 30px 5px;
+}
+
+.application_industries .box_items .item_in:hover{
+  cursor: pointer;
+}
+
+.application_industries .box_items .item_in img{
+  width: 100%;
+  height: 100%  ;
+
+}
+
+.application_industries .box_items .item_in p{
+  text-align: center;
+  font-size: 20px;
+  font-family: CyrMedium,Arial;
+  color: $blue;
+  padding: 8px 0;
+  transition: all .4s;
+  margin-top: -3px;
+}
+
+.application_industries .box_items .item_in:hover p{
+  background: $red;
+  color: #fff;
+
+}
+
+
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
@@ -241,6 +298,16 @@
   }
   .nav_slider .item{
     //height: 120px;
+  }
+
+  .application_industries h2{
+    text-align: center;
+  }
+
+  .application_industries {
+    background: #e7eef4;
+    padding-top: 40px;
+    padding-bottom: 60px;
   }
 }
 
@@ -346,6 +413,19 @@
 
   .block_tab_panel .nav-tabs .nav-link{
     font-size: 13px;
+  }
+  .video_box video{
+    width: 100%;
+  }
+
+  .application_industries h2{
+    font-size: 1.5em;
+    margin-bottom: 7px;
+  }
+
+  .application_industries {
+    padding-top: 17px;
+    padding-bottom: 25px;
   }
 }
 
