--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,13 @@
 /*----from---*/
 @import "_form.scss";
 
+/*----Page pod ---*/
+
 @import "pages/pod.scss";
+
+/*----Page seporator ---*/
+
+@import "pages/seporator.scss";
 
 *{
   margin: 0;
