--- a/sass/pages/pod.scss
+++ b/sass/pages/pod.scss
@@ -219,6 +219,7 @@
   font-size: 2rem;
   font-family: CyrMedium,Arial;
   margin-bottom: 20px;
+  margin-left: 13px;
 }
 
 .application_industries .box_items{
