--- a/sass/main.scss
+++ b/sass/main.scss
@@ -24,6 +24,10 @@
 
 @import "pages/seporator.scss";
 
+/*----Page about----*/
+
+@import "pages/about.scss";
+
 *{
   margin: 0;
   padding: 0;
@@ -56,8 +60,8 @@ h2{
 .tel{
   top: 30%;
 }
-.email{
-  top: 45%;
+.email {
+  top: calc(30% + 70px);
 }
 .tel img, .email img{
   width: 60px;
@@ -151,13 +155,15 @@ header{
   display: initial;
 }
 .header_page_main{
+  man-height: 100vh;
   min-height: 850px;
 }
 .logo.mob{
   display: none;
 }
 .pane-container{
-  height: 850px;
+  height: 100vh;
+  min-height: 850px;
 }
 
 .top_header {
@@ -187,7 +193,8 @@ header{
 
 .headerSlider .item{
   width: 100vw;
-  height: 850px;
+  height:100vh;
+  min-height: 850px;
   position: relative;
 }
 
@@ -313,15 +320,20 @@ header{
   color: $white;
   font-size: 1.7rem;
   margin-top: 3rem;
+  font-family: CyrMedium,Arial;
 }
 .block_three{
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
   position: relative;
+  overflow: hidden;
 }
 
 .bg_over{
+  width: 99%;
+  height: 100%;
+  margin: auto;
   position: absolute;
   left: 0;
   right: 0;
@@ -333,7 +345,7 @@ header{
 
 
 .box_animation{
-  flex-basis: 31%;
+  flex-basis: 32%;
   height: 17.14rem;
   background: #182c4f;
   margin: .4rem;
@@ -474,6 +486,7 @@ header{
   align-items: center;
   color: $white;
   font-size: 1.4rem;
+  font-family: CyrMedium,Arial;
 }
 
 .block_five .box_img .box img{
@@ -505,7 +518,7 @@ header{
 }
 
 .block_six .wrap .box_item{
-  flex-basis: 30%;
+  flex-basis: 23%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -513,13 +526,14 @@ header{
 
 .block_six .wrap .box_item img{
   width: 100%;
-  height: 270px;
+  height: 230px;
 }
 
 .block_six .wrap .box_item p{
   font-size: 1.4rem;
   margin-top: .5rem;
   flex-basis: 30%;
+  font-family: CyrMedium,Arial;
 }
 
 .block_six .wrap .box_item .link{
@@ -531,6 +545,7 @@ header{
   margin-top: 3.14rem;
   align-self: flex-end;
   transition: all .6s;
+  font-family: CyrMedium,Arial;
 }
 
 .block_six .wrap .box_item .link:hover{
