--- a/sass/pages/seporator.scss
+++ b/sass/pages/seporator.scss
@@ -99,7 +99,21 @@
 
 
 .seporator_slider{
-  margin-bottom: 150px;
+  margin-bottom: 120px;
+}
+
+.seporator_text{
+  margin-bottom: 130px;
+}
+
+.seporator_text p{
+  font-size: 20px;
+  font-family: CyrRoma,Arial;
+}
+
+#description{
+  font-size: 18px;
+  font-family: CyrRoma,Arial;
 }
 
 /*==========  Desktop First Method  ==========*/
@@ -119,6 +133,10 @@
     margin-top: 17px;
     margin-bottom: 60px;
   }
+  .seporator_text{
+    margin-bottom: 60px;
+  }
+
 }
 
 /* Small Devices, Tablets */
@@ -151,6 +169,9 @@
 
   .section_seporators{
     margin-top: 17px;
+    margin-bottom: 0;
+  }
+  .seporator_text{
     margin-bottom: 0;
   }
 }
